--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,14 @@
 # Omakase Ruby styling for Rails
-inherit_gem: { rubocop-rails-omakase: rubocop.yml }
+inherit_gem:
+  rubocop-rails-omakase: rubocop.yml
+  rubocop-fjord:
+    - "config/rubocop.yml"
+    - "config/rails.yml"
+
 
 # Overwrite or add rules to create your own house style
 #
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # Layout/SpaceInsideArrayLiteralBrackets:
 #   Enabled: false
+
