--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Lint code for consistent style
         run: bin/rubocop -f github
 
+      - name: Lint Slim templates for consistent style
+        run: bundle exec slim-lint app/views
+
   test:
     runs-on: ubuntu-latest
 
