--- a/config/database.yml
+++ b/config/database.yml
@@ -79,6 +79,6 @@ test:
 #
 production:
   <<: *default
-  database: pix_pick_production
-  username: unikounio
-  password: <%= ENV["PIX_PICK_DATABASE_PASSWORD"] %>
+  host: <%= ENV["APP_DATABASE_HOST"] %>
+  username: <%= ENV["APP_DATABASE_USER"] %>
+  password: <%= ENV["APP_DATABASE_PASSWORD"] %>
