--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,8 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y libvips42
       - name: Set up DB
         run: bin/rails db:migrate
       - name: Precompile assets
