--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y imagemagick libvips42
+        run: sudo apt-get update && sudo apt-get install -y libvips42
       - name: Set up DB
         run: bin/rails db:migrate
       - name: Precompile assets
