.rubocop.ymlにおけるgemの主な呼び出し方法をpluginsに変更

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,13 @@
-require:
+plugins:
   - rubocop-rails
-  - rubocop-fjord
   - rubocop-performance
   - rubocop-rspec
   - rubocop-rspec_rails
   - rubocop-capybara
   - rubocop-factory_bot
+
+require:
+  - rubocop-fjord
 
 AllCops:
   SuggestExtensions: false
